ETC: 명함신청 서비스 수정